Design / Bug Fixing Update
GENERAL:
- Fixed second slide-in bug where if you opened the Android OS keyboard, all the elements would resize incorrectly
- Allowed cards to resize when the width of the page is too small for the cards to slide out to the right (change all units to vh/vw)
- Added header comments

TO-DO:
- Fix background scaling
- Test on different displays and browsers

TIME TAKEN: ~2 HOURS
TOTAL TIME TAKEN: 8.5 HOURS

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,10 @@
+/*
+ * Filename: styles.css
+ * Author: Nilay Sondagar
+ * Date Created: September 5, 2018
+ * Purpose: Contains the styling and design for the Duck Tracker website.
+ */
+
 /*********************************************************************************
  *										TAG CSS									 *
  *********************************************************************************/
@@ -13,17 +20,17 @@ html {
 h2 {
 	color: #f37041;
 	text-align: center;
-	font-size: 40px;
+	font-size: 4.5vh;
 }
 
 input[type=text], input[type=time] {
 	width: 90%;
-	margin-top: 10px;
-	margin-bottom: 20px;
+	margin-top: 1vh;
+	margin-bottom: 1.8vh;
 	margin-left: 0px;
-	padding: 12px 20px;
+	padding: 1.2vh 1.8vh;
 	color: black;
-	font-size: 12px;
+	font-size: 1.4vh;
 	box-sizing: border-box;
 	background-color: white;
 	border-radius: 5px;
@@ -60,11 +67,8 @@ tr {
  *										ID CSS									 *
  *********************************************************************************/
 
-#content {
-	width: 450px;
-	height: 650px;
-	margin-top: 3%;
-	position: relative;
+#databutton {
+	margin-top: 3vh;
 }
 
 #datatable {
@@ -81,14 +85,15 @@ tr {
 }
 
 #duckform {
-	width: 400px;
-	height: 550px;
-	margin-left: 20%;
-	margin-top: 15%;
+	width: 40.5vh;
+	height: 56vh;
+	margin-left: 8.2vh;
+	margin-top: 8vh;
 	margin-bottom: 10%;
-	padding: 20px;
+	padding: 2.5vh;
 	position: absolute;
 	text-align: left;
+	font-size: 1.5vh;
 	font-weight: 600;
 	color: black;
 	background-color: white; 
@@ -100,19 +105,20 @@ tr {
 
 #duckinfo {
 	font-family: "Roboto";
-	font-size: 24px;
+	font-size: 2.5vh;
 	font-weight: 300;
-	display: inline-block;
+	margin: auto;
+	margin-bottom: 3vh;
 	width: 80%;
 }
 
 #infocard {
-	width: 450px;
-	height: 650px;
-	margin-left: 15%;
-	margin-top: 5%;
-	margin-bottom: 5%;
-	padding: 20px;
+	width: 43.5vh;
+	height: 67vh;
+	margin-left: 7vh;
+	margin-top: 2.3vh;
+	margin-bottom: 2.3vh;
+	padding: 1.8vh;
 	position: absolute;
 	z-index: 10;
 	text-align: center;
@@ -131,7 +137,7 @@ tr {
 }
 
 #time {
-	width: 35%;
+	width: 12vh;
 	font-family: "Roboto";
 	font-weight: 700;
 }
@@ -145,8 +151,8 @@ tr {
     color: black;
     border: #22A6F8 solid 3px;
     outline: none;
-    padding: 10px 20px;
-    font-size: 16px;
+    padding: 1vh 1.8vh;
+    font-size: 1.8vh;
     border-radius: 5px;
     transition-duration: 0.4s;
 }
@@ -164,10 +170,42 @@ tr {
  *							  		MEDIA QUERY CSS								 *
  *********************************************************************************/
 
-@media screen and (max-width: 1020px) {
+@media screen and (orientation:portrait) {
 
 	html {
-		height: 140%;
+		text-align: center;
+		height: 100%;
+	}
+
+	table {
+		width: 98%;
+	}
+
+	#databutton {
+		margin-top: 3vw;
+	}
+
+	#duckform {
+		width: 80vw;
+		height: 55vh;
+		font-size: 2.5vw;
+		margin-top: 2.3vh;
+		margin-left: 0;
+		left: 50%;
+    	transform: translate(-50%);
+	}
+
+	#duckinfo {
+		font-size: 4.5vw;
+		margin-bottom: 3vw;
+	}
+
+	#infocard {
+		width: 85vw;
+		height: 65vh;
+		margin-left: 0;
+		left: 50%;
+    	transform: translate(-50%);
 	}
 
 }
